hphp/test/zend/good/ext/date/tests/bug29585.php
<?php
date_default_timezone_set("GMT");
echo gmdate("Y-m-d H:i:s", strtotime("2004W30"));
?>